--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -11,7 +11,9 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         python-version:
+          - "3.10"
           - "3.11"
+          - "3.12-dev"
 
     name: Test
     runs-on: ${{ matrix.os }}
@@ -26,7 +28,7 @@ jobs:
             python-version: ${{ matrix.python-version }}
 
         - name: Install dependencies
-          run: python -m pip install pytest .
+          run: python -m pip install pytest
 
         - name: Run tests
           run: pytest
