--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -31,4 +31,4 @@ jobs:
           run: python -m pip install pytest
 
         - name: Run tests
-          run: pytest
+          run: py -m pytest
