--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -28,7 +28,9 @@ jobs:
             python-version: ${{ matrix.python-version }}
 
         - name: Install dependencies
-          run: python -m pip install pytest
+          run: |
+            python -m pip install pytest
+            pip install -r requirements.txt
 
         - name: Run tests
-          run: py -m pytest
+          run: python -m pytest
