--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -33,9 +33,9 @@ jobs:
             pip install -r requirements.txt
 
         - name: Run tests
-          run: python -m pytest
+          run: python -m pytest --cov
 
-          
+
         - name: Upload coverage reports to Codecov
           uses: codecov/codecov-action@v4.0.1
           with:
