--- a/.github/workflows/CItests.yaml
+++ b/.github/workflows/CItests.yaml
@@ -9,9 +9,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
         python-version:
+          # - "3.10"
           - "3.11"
+          # - "3.12-dev"
 
     name: Test
     runs-on: ${{ matrix.os }}
@@ -27,8 +29,10 @@ jobs:
 
         - name: Install dependencies
           run: |
-            python -m pip install pytest
-            pip install -r requirements.txt
+            python -m pip install --upgrade pip
+            pip install pytest
+            if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      
             echo "API_KEY=${{ secrets.API_KEY }}" >> .env
             echo "DB_LOGIN=${{ secrets.CON_STRING }}" >> .env
             echo "KEY=${{ secrets.KEY }}" >> .env
